@@ -583,7 +583,7 @@
   <!-- OT::MultiFORM parameters -->
   <MultiFORM-DefaultGamma value_float="1.1" />
   <MultiFORM-DefaultDelta value_float="0.75" />
-  <MultiFORM-DefaultMaximumNumberOfDesignPoints value_int="4" />
+  <MultiFORM-DefaultMaximumDesignPointsNumber value_int="4" />
 
   <!-- OT::StrongMaximumTest parameters -->
   <StrongMaximumTest-DefaultDeltaPrecision     value_float="1.0e-7"  />
