@@ -56,6 +56,8 @@ public:
   Scalar getMinimumProbability() const;
 
   /** Accessor to the achieved number of steps */
+  UnsignedInteger getStepsNumber();
+  /** @deprecated */
   UnsignedInteger getNumberOfSteps();
 
   /** Stepwise result accessors */
