@@ -21,6 +21,9 @@
  * IndicatorFunction constructor takes a Domain as input
  * Intervals and DomainUnions get new method computeDistanceToDomain(Point or Sample)
  * Renamed some ResourceMap keys: cache-max-size>Cache-MaxSize, parallel-threads>TBB-ThreadsNumber
+ * Deprecated TBB.SetNumberOfThreads/GetNumberOfThreads
+ * Deprecated MultiFORM.setMaximumNumberOfDesignPoints/getMaximumNumberOfDesignPoints
+ * Deprecated SubsetSampling.getNumberOfSteps
 
 === Documentation ===
 
